<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mode"
    android:background="@drawable/mode_background">

    <ImageView
        android:id="@+id/mode_IMG_x_back"
        android:contentDescription="@null"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_x_back"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        />

    <ImageView
        android:id="@+id/mode_IMG_title"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_mode_title"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mode_IMG_title"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/mode_LBL_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_LBL"
            android:textSize="24sp"
            android:fontFamily="@font/arlrdbd"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            />

        <ToggleButton
            android:id="@+id/mode_TBTN_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/control_TBTN_on"
            android:textOff="@string/control_TBTN_off"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/mode_LBL_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_LBL"
            android:textColor="@color/white"
            android:fontFamily="@font/arlrdbd"
            android:textSize="24sp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            />

        <ToggleButton
            android:id="@+id/mode_TBTN_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/speed_TBTN_on"
            android:textOff="@string/speed_TBTN_off"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />

    </GridLayout>

</RelativeLayout>