<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_LOT_game_5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    tools:context=".MainActivity_5Lanes">

    <RelativeLayout
        android:id="@+id/main_LOT_body_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

        <ImageView
            android:id="@+id/top_panel_ICN_heart1_5"
            android:contentDescription="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/top_panel_ICN_heart2_5"
            android:contentDescription="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/top_panel_ICN_heart1_5"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/top_panel_ICN_heart3_5"
            android:contentDescription="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/top_panel_ICN_heart2_5"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/top_panel_ICN_pause_5"
            android:contentDescription="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_rounded_pause" />

        <ImageView
            android:id="@+id/top_panel_ICN_play_5"
            android:contentDescription="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_rounded_play"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/main_LBL_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/distance_LBL"
            android:layout_below="@+id/top_panel_ICN_heart1_5"
            android:fontFamily="@font/arlrdbd"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/main_LBL_score_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/coin_LBL"
            android:layout_below="@+id/main_LBL_distance"
            android:fontFamily="@font/arlrdbd"
            android:textColor="@color/firstPlace"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/main_LBL_score_5"
            android:layout_below="@+id/main_LBL_distance"
            android:src="@drawable/ic_star_collectable"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:weightSum="5"
            android:layout_below="@+id/top_panel_ICN_heart1_5">

            <LinearLayout
                android:id="@+id/body_LOT_most_left_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/most_left_IMG_alien_52"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/most_left_IMG_alien_5"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/most_left_IMG_coin"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_star_collectable"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_LOT_left_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/left_IMG_alien_52"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/left_IMG_alien_5"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/left_IMG_coin"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_star_collectable"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_LOT_center_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/center_IMG_alien_52"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/center_IMG_alien_5"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/center_IMG_coin"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_star_collectable"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_LOT_right_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/right_IMG_alien_52"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/right_IMG_alien_5"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/right_IMG_coin"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_star_collectable"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_LOT_most_right_5"
                android:contentDescription="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/most_right_IMG_alien_52"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/most_right_IMG_alien_5"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alien"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/most_right_IMG_coin"
                    android:contentDescription="@null"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_star_collectable"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/char_IMG_spaceship_5"
            android:contentDescription="@null"
            android:layout_width="85dp"
            android:layout_height="115dp"
            android:layout_above="@+id/control_BTN_left_5"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_new_spaceship" />

        <ImageView
            android:id="@+id/control_BTN_left_5"
            android:contentDescription="@null"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_left_arrow" />

        <ImageView
            android:id="@+id/control_BTN_right_5"
            android:contentDescription="@null"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_right_arrow" />

    </RelativeLayout>

    <TextView
        android:id="@+id/main_LBL_pause_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_BTN"
        android:textSize="50sp"
        android:fontFamily="@font/arlrdbd"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

</RelativeLayout>